<resources>
    <string name="app_name">AA1</string>
    <string name="SubmitButton">SUBMIT</string>
    <string name="password_hint">Password</string>
    <string name="child_s_name_hint">Child\'s Name</string>
    <string name="Register_header_name">Register</string>
    <string name="register_name">Name</string>
    <string name="register_username">Username</string>
    <string name="email_id">Email ID</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_login_page">LoginPage</string>
</resources>
