<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sg.aa1.RegisterPage"
    android:background="#CACFD2">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/RegPageHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Register_header_name"
        android:textAlignment="center"
        android:textSize="30dp"/>
    <EditText
            android:id="@+id/RegName"
            android:layout_below="@id/RegPageHead"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_name"
            android:inputType="textPersonName"
            android:singleLine="true"

        />
    <EditText
        android:id="@+id/RegChildName"
        android:layout_below="@id/RegName"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/child_s_name_hint"
        android:inputType="textPersonName"
        android:singleLine="true"

        />
    <EditText
        android:id="@+id/RegUserID"
        android:layout_below="@id/RegChildName"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_username"
        android:inputType="textPersonName"
        android:singleLine="true"

        />
    <EditText
        android:id="@+id/RegPswd"
        android:layout_below="@id/RegUserID"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:singleLine="true"

        />
    <EditText
        android:id="@+id/emailid"
        android:layout_below="@id/RegPswd"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:singleLine="true"

        />
    <Button
        android:id="@+id/SubmitButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/emailid"
        android:layout_marginTop="30dp"
        android:text="@string/SubmitButton"
        android:textSize="20dp"
        android:textStyle="bold"
        android:onClick="attemptLogin"

        />
    </RelativeLayout>
</RelativeLayout>
